# Wifimonitor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WORK_IN_PROGRESS.md  pyproject.toml  requirements-dev.txt  requirements-laptop.txt  requirements.txt  wifi_common.py  wifi_monitor.py  wifi_monitor_mac.py  wifi_monitor_nitro5.py
.claude/agents/: architect-agent.md  devsecops-agent.md  manager-agent.md  red-team-agent.md  reviewer-agent.md  scrum-master-agent.md  tdd-agent.md
.claude/blueprints/: client_count_per_bssid.md
.cursor/agents/: architect.md  devsecops.md  manager.md  red-team.md  scrum-master.md  tdd.md
.cursor/rules/: wifimonitor-overview.mdc  wifimonitor-standards.mdc
.github/workflows/: ci.yml
src/wifimonitor/: __init__.py  __main__.py  credentials.py  platform_detect.py  wifi_common.py  wifi_monitor_nitro5.py
src/wifimonitor/capture/: __init__.py  deauth.py  dns.py
src/wifimonitor/detection/: __init__.py  arp.py  rogue.py
src/wifimonitor/display/: __init__.py  tables.py
src/wifimonitor/scanning/: __init__.py  airodump.py  nmcli.py
tests/: test_capture_deauth.py  test_capture_dns.py  test_credentials.py  test_detection_arp.py  test_detection_rogue.py  test_display_tables.py  test_platform_detect.py  test_scanning_airodump.py  test_scanning_nmcli.py  test_wifi_common.py  test_wifi_monitor_mac.py  test_wifi_monitor_nitro5.py
