[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifimonitor"
version = "0.1.0"
description = "WiFi monitoring tool for Linux laptops and Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0,<15",
]

[project.scripts]
wifimonitor = "wifimonitor.wifi_monitor_nitro5:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# E402: imports after the MIN_PYTHON version guard are intentional
"src/wifimonitor/wifi_monitor_nitro5.py" = ["E402"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true
